# ReproBugBazelTscWrapped

./: WORKSPACE  package.json  tsconfig.json
src/: BUILD.bazel  class1.ts
